--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js",
     "commit": "cz"
   },
-  "keywords": ["nodejs", "jest", "Higher Order Functions", "javascript"],
+  "keywords": [
+    "nodejs",
+    "jest",
+    "Higher Order Functions",
+    "javascript"
+  ],
   "author": {
     "name": "Douglas Sales",
     "email": "douglas.sales@gmail.com",
@@ -26,7 +31,7 @@
     "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "jest": "^26.6.3"
+    "jest": "^29.5.0"
   },
   "config": {
     "commitizen": {
