--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,18 @@
 {
     "env": {
         "commonjs": true,
-        "es2021": true,
+        "es6": true,
         "node": true
     },
     "extends": [
         "airbnb-base"
     ],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaVersion": 2018
     },
     "rules": {
     }
