--- a/package.json
+++ b/package.json
@@ -1,42 +1,46 @@
 {
-  "name": "zoo-functions",
+  "name": "project-zoo-functions",
   "version": "1.0.0",
-  "description": "Sétimo projeto do curso de Desenvolvimento Full Stack Web da Trybe.",
+  "description": "",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "jest",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js",
-    "commit": "cz"
+    "test:coverage": "jest --coverage test/*",
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js"
   },
-  "keywords": [
-    "nodejs",
-    "jest",
-    "Higher Order Functions",
-    "javascript"
-  ],
-  "author": {
-    "name": "Douglas Sales",
-    "email": "douglas.sales@gmail.com",
-    "url": "https://github.com/doug-sales1819"
+  "engines": {
+    "node": ">=16"
   },
+  "jest": {
+    "coverageReporters": [
+      "text",
+      "html"
+    ],
+    "collectCoverageFrom": [
+      "**/src/handlerElephants.js",
+      "**/src/getOpeningHours.js"
+    ],
+    "testMatch": [
+      "**/test/**/*.test.js?(x)",
+      "**/evaluator/**/*.test.js?(x)"
+    ],
+    "testTimeout": 30000
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:doug-sales1819/zoo-functions.git"
+  },
+  "author": "",
   "license": "MIT",
+  "homepage": "https://github.com/doug-sales1819/zoo-functions/blob/main/README.md",
   "devDependencies": {
-    "@commitlint/cli": "^17.5.1",
-    "@commitlint/config-conventional": "^17.4.4",
-    "commitizen": "^4.3.0",
-    "cz-emoji-conventional": "^1.0.1",
-    "eslint": "^8.37.0",
+    "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.5.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-emoji-conventional"
-    }
-  },
-  "private": true
+    "faker": "5.5.3",
+    "jest": "25.2.3"
+  }
 }
